--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "description": "AI-powered credit card rewards optimizer for Canadians. Track your points, get smart recommendations.",
     "start_url": "/dashboard",
     "display": "standalone",
-    "background_color": "#09090b",
-    "theme_color": "#09090b",
+    "background_color": "#f9fafb",
+    "theme_color": "#ffffff",
     "orientation": "portrait-primary",
     "icons": [
         {
